spring boot 3 migration (#2190)
* Changed maven compiler to Java 17

Removed findbugs jsr305 dependency in favor of jetbrains annotations to prevent errors in javadoc creation

* Fix UnitTest

* Fix admin-server tests, formatting etc.

* Fix Nullable imports

* Set up JDK 17

* Introduce Spring Boot 3

* Introduce Spring Boot 3

* fix wiremock setup

* Add explicit eureka-client version
New Spring Cloud version for Spring Boot 3

* moved from node-sass to sass

* Change java version to 17 in github actions

* cleanup versions

* set java-version to 17 in release-to-maven-central.yml

* use nexus-staging-maven-plugin 1.6.12

* spring-boot-admin-sample-zookeeper deactivated (nexus-staging-maven-plugin fails)

* reactivated spring-boot-admin-sample-zookeeper

* replace developers in pom by codecentric generic part

* chore: update pipeline to use windows-latest

* updated nexus-staging-maven-plugin to 1.6.13

* fix: publish package step

* feat: merge new UI

* chore: update spring boot and spring cloud

* chore: fix errors in IDE

* chore: update Hazelcast and add shutdown to tests

* chore: ceckstyle

* chore: fix windows build

* chore: update spring boot to 3.0.0-M3

* chore: padding to the panel

* fix: base path of build may not start with leading slash for ressources

* fix: buttons do not show current selected logging level

* fix: toggle button for scope in caches view is shown, even when there is just one instance only

* chore: remove logging

* feat(AuditEvents): migrate to new UI

* chore: nicer panel

* fix: show user name in user menu when opened

* fix: visibility of services that are down, offline or oos

* fix: metadaten overflow

* fix: audit events error

* fix: debug email address

* fix: wallboard display glitch in Safari

* fix: application list version jumping

* fix: show error message on top of health details

* chore: run npm tests in test phase (allows to 